--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -1,10 +1,16 @@
 .header {
+  border: 1px solid #395795;
+  padding: 2px 0;
+
   .wrapper {
     display: flex;
+    align-items: center;
+    gap: 0;
 
     .right {
       display: flex;
       flex-direction: column;
+      justify-content: center;
       gap: 0;
 
       .links {
