--- a/src/styles/pages/footer_pages.scss
+++ b/src/styles/pages/footer_pages.scss
@@ -4,6 +4,9 @@
   .wrapper {
     display: flex;
     gap: 5px;
+    a {
+      text-decoration: none;
+    }
 
     .content {
       display: flex;
@@ -29,7 +32,33 @@
           a {
             text-decoration: none;
             color: #538adc;
-            
+          }
+          form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 5px;
+
+            .form-group {
+              display: flex;
+              justify-content: space-around;
+              width: 100%;
+              gap: 10px;
+
+              input {
+                background-color: #d9dfea;
+              }
+            }
+
+            .buttons {
+              margin: 5px;
+              button {
+                background-color: #538adc;
+                color: white;
+                padding: 2px 20px;
+                margin-right: 5px;
+              }
+            }
           }
         }
       }
